made contact button and menu toggle button visible at all times using position fixed

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 25px auto 0;
+  margin: 20px auto 0;
   z-index: 1;
   width: var(--width);
   display: flex;
@@ -21,7 +21,7 @@
 
 .title {
   font-weight: 900;
-  margin-top: 25px;
+  margin-top: 5rem;
   margin-bottom: 20px;
     font-size: var(--font-xxl);
 }
